--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     // Gson
-    implementation 'com.squareup.retrofit2:coverter-gson:2.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
